app/assets/stylesheets/item.css.scss
/* ... */
  /* Mobile Landscape Size to Tablet Portrait (devices and browsers) */
  @media only screen and (min-width: 500px) and (max-width: 775px) {

    .mobile-navigation {
      display: block;
    }

    .iosSlider {
      // required
      position: relative;
      top: 0;
      left: 0;
      overflow: hidden;
      width: 100%;
      height: 500px;

      .slider {
        // required
        width: 100%;
        height: 320px;

        .slide {
          // required
          float: left;
          width: 100%;
          height: 500px;
          background-position: center center;
          background-size: cover;
        }
      }
    }

    .item-grid {
    @include clearfix;
    padding: 7px 20px;
    margin-left: auto;
    margin-right: auto;
    width: 344px;
    }

    .back.top {
      display: none;
    }

    .sidebar {
      display: none;
    }
    .content {
      margin-left: auto;
      margin-right: auto;
    }
    .sidebar-top{
      margin-left: -39px;
    }

    .mobile-menu {
      font-size: 1.5em;
      display: block;
      height: 36px;
      width: 24px;
      padding: 14px 24px;
      cursor: pointer;
    }

    h1, h2{
      font-size: 40px;
      margin-top: 6%;
      margin-bottom: 8px;
    }
    .top-bar {
      height: 28px;
      width: 100%;
      position: fixed;
      top: 0;
    }
    .top-bar .top-bar-content {
      margin-left: 0px;
      color: #C59D5E;
      text-align: center;
      font-size: 12px;
      font-weight: lighter;
      line-height: 30px;
      text-transform: uppercase;
      letter-spacing: 4px;
    }
    .top-nav {
      display: block;
      height: 60px;
      background: #ecebe9;
      width: 85%;
      text-align: center;
      position: fixed;
      top: 28px;

    }
    .menu {
      background: #cbcac9;
      width: 15%;
      height: 60px;
      text-align: center;
      position: fixed;
      top: 28px;
      right: 0;
      }
    .logotype {
      width: 90%;
      margin-top: 3px;
      max-width: 400px;
    }

    .slogan {
      margin: 0px auto 0 auto;
      display: block;
      padding: 5%;
      width: 90%;
      background: #e1e0dd;
    }

    h3 {
      margin-top: 0;
      font-size: 18px;
    }

    .mobile-menu {
      font-size: 1.5em;
      display: block;
      height: 36px;
      width: 100%;
      padding: 14px 0;
    }
    .footer {
      display: block;
      background: #c6c4c2;
      position: relative;
      ul.copyright {
        display: none;
      }
      ul.submenu {
        display: inline-block;
        width: 100%;
        padding: 0;
        text-align: center;
        text-transform: uppercase;
        li {
          text-align: center;
          padding: 0 10%;
          font-size: 1em;
          display: inline;
        }
      }

      .bottom-bar {
        width: 100%;
        background: image_url('topbar.bg.gif') repeat-x top left;
        color: $gold_color;
        text-align: center;
        font-size: 11px;
        font-weight: lighter;
        text-transform: uppercase;
        letter-spacing: 2px;
        padding: 10px 0 6px 0;
        display: block;
        position: relative;
      }
    }
    .scrollleft, .scrollright {
      display: none;
    }
  }
/* ... */

